--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       <!-- Navbar section  end here -->
 
        <!-- Banner section -->
+       <!-- Banner section -->
        <section class="lg:my-10 relative mx-5 lg:mx-0">
         <div class="carousel w-full h-[60vh]">
             <div id="slide1" class="carousel-item relative w-full">
@@ -387,7 +388,7 @@
                 class="fa-solid fa-star-half-stroke text-[#F85559] opacity-60"
               ></i>
               <i class="fa-regular fa-star text-[#F85559] opacity-60"></i>
-              <!-- <p class="text-[#f85559] mt-8">Details</p> -->
+            
 
               <div class="mt-8">
                 <button
